# tui-tome

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/adapters/md/: Cargo.toml
crates/adapters/md/src/: lib.rs
crates/adapters/txt/: Cargo.toml
crates/adapters/txt/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
